--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=ApiColeccionArte
+spring.application.name=coleccionARTE
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/Gaati_E3
-spring.datasource.username=user_api
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql:/spring:guoLbW1DKtIYwlMsogeLhQaVNP0BHpqz@dpg-d0qffgh5pdvs73aij760-a/coleccionarte
+spring.datasource.username=spring
+spring.datasource.password=guoLbW1DKtIYwlMsogeLhQaVNP0BHpqz
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
 login.level.org.hibernate=ERROR
 server.port=8080
