--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:/spring:guoLbW1DKtIYwlMsogeLhQaVNP0BHpqz@dpg-d0qffgh5pdvs73aij760-a/coleccionarte
-spring.datasource.username=spring
-spring.datasource.password=guoLbW1DKtIYwlMsogeLhQaVNP0BHpqz
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.user=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRIGN_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
 login.level.org.hibernate=ERROR
 server.port=8080
