--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.user=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRIGN_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
 login.level.org.hibernate=ERROR
-server.port=8080
+server.port=${PORT:8082}
