--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.user=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRIGN_DATASOURCE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
 login.level.org.hibernate=ERROR
-server.port=${PORT:8082}
+server.port=${PORT:8085}
