--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=coleccionarte
+spring.application.name=ColeccionArte
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATABASE_URL}
-spring.datasource.username=${SPRING_DATABASE_USERNAME}
-spring.datasource.password=${SPRING_DATABASE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
-login.level.org.hibernate=ERROR
+login.level.org.hibernate=${PORT:8082}
 
