--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,4 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non.contextual_creation=true
-login.level.org.hibernate=${PORT:8082}
-
+logging.level.org.hibernate=INFO
